# rust-systemd-run

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust-clippy.yml  rust.yml
judge-client-3/: Cargo.toml  README.md
judge-client-3/etc/systemd/system/: opoj-x.slice  opoj.slice
judge-client-3/mocktest/: .gitignore  test1.toml  test10.toml  test2.toml  test3.toml  test4.toml  test5.toml  test6.toml  test7.toml  test8.toml  test9.toml  test_run.sh
judge-client-3/mocktest/code/aplusb/: ac.c  ac_bigstack.c  ce.c  no.c  ol.c  re.c  tl.c  wa.c
judge-client-3/mocktest/etc/: judge3.toml
judge-client-3/mocktest/problem/aplusb/: 2.in  2.out
judge-client-3/src/: data.rs  data_hustoj.rs  data_mock.rs  error.rs  main.rs  util.rs
src/: cpu_sched.rs  error.rs  identity.rs  ioredirect.rs  lib.rs  mount.rs  sd.rs  tests.rs  tests_root.rs
test-aux/: .gitignore  Makefile  barrier.h  memory.c  minimal.c  nosgid.c  orga-itsuka.c  rw.c  setuid  setuid.c  shm.c  threads.cc  use-stack.c  waste-fd.c  waste-pid.cc
tests/: basic.rs  integrate.rs  ioredirect.rs  memory.rs  rlim.rs  root.rs  root_cpu.rs  root_cpu_sched.rs  root_cred.rs  root_misc.rs  root_mnt.rs  root_ns.rs  unpriv_ns.rs
