[package]
name = "systemd-run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = ["v4"] }
futures = "0.3.21"
zbus = "2.1.1"
zbus_names = "2.1.0"
byte-unit = "4.0.14"

[dev-dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }

[features]
default = ["unified_cgroup", "systemd_236"]
unified_cgroup = ["systemd_231"]
systemd_236 = ["systemd_231"]
systemd_231 = []
