[package]
name = "systemd-run"
version = "0.2.1"
edition = "2021"
description = "A Rust crate for running processes as Systemd transient services."
repository = "https://github.com/xdu-icpc/rust-systemd-run"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
futures = "0.3.21"
zbus = "3.0.0"
zbus_names = "2.1.0"
byte-unit = "4.0.14"
thiserror = "1.0"

[dev-dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }

[features]
default = ["unified_cgroup", "systemd_251"]

# Unified cgroup support was first introduced in 226 but it's broken with
# newer kernels.  Current unified cgroup support was added in 230, but it
# does not provides interesting functions until 231.
unified_cgroup = ["systemd_231"]

systemd_251 = ["systemd_249"]
systemd_249 = ["systemd_248"]
systemd_248 = ["systemd_247"]
systemd_247 = ["systemd_244"]
systemd_244 = ["systemd_240"]
systemd_240 = ["systemd_238"]
systemd_238 = ["systemd_236"]
systemd_236 = ["systemd_233"]
systemd_233 = ["systemd_232"]
systemd_232 = ["systemd_231"]
systemd_231 = ["systemd_229"]
systemd_229 = ["systemd_227"]
systemd_227 = ["systemd_213"]
systemd_213 = []
