[package]
name = "systemd-run"
version = "0.9.0"
edition = "2021"
description = "A Rust crate for running processes as Systemd transient services."
repository = "https://github.com/xdu-icpc/rust-systemd-run"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
futures = "0.3.29"
zbus = "5.0.1"
zbus_names = "4.0.0"
byte-unit = "5.0.3"
thiserror = "2.0"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }

[features]
default = ["unified_cgroup", "systemd_252"]

# Unified cgroup support was first introduced in 226 but it's broken with
# newer kernels.  Current unified cgroup support was added in 230, but it
# does not provides interesting functions until 231.
unified_cgroup = ["systemd_231"]

systemd_252 = ["systemd_251"]
systemd_251 = ["systemd_249"]
systemd_249 = ["systemd_248"]
systemd_248 = ["systemd_247"]
systemd_247 = ["systemd_244"]
systemd_244 = ["systemd_240"]
systemd_240 = ["systemd_238"]
systemd_238 = ["systemd_236"]
systemd_236 = ["systemd_233"]
systemd_233 = ["systemd_232"]
systemd_232 = ["systemd_231"]
systemd_231 = ["systemd_229"]
systemd_229 = ["systemd_227"]
systemd_227 = ["systemd_213"]
systemd_213 = ["systemd_188"]
systemd_188 = []
