[package]
name = "judge-client-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = [ "derive" ] }
serde = { version = "1.0.137", features = [ "derive" ] }
toml = "0.5"
log = "0.4.17"
byte-unit = "4.0.14"
serde_with = "1.13.0"
log4rs = "1.1.1"
async-std = { version = "1.10.0", features = ["attributes"] }
uuid = { version = "0.8.2", features = ["v4"] }
async-trait = "0.1.53"
cfg-if = "1.0.0"

[dependencies.sqlx]
version = "0.5.13"
features = ["mysql", "runtime-async-std-native-tls"]
optional = true

[features]
hustoj = ["dep:sqlx"]

[dependencies.systemd-run]
path = ".."
features = [ "systemd_249", "unified_cgroup" ]
